Changes By Ujwala

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <body>
     <h1> changes by shital</h1>
     <p>I am very happy ,I know how github work.</p>
+
+    <h2>Changes By Ujwala</h2>
+    <p>This is our first Practice Project in which we all group members are working toghether.</p>
 </body>
 </html>
