--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 
     <h2>Changes By Ujwala</h2>
     <p>This is our first Practice Project in which we all group members are working toghether.</p>
+
+    <b>hi guy's i am shweta.</b>
+    <p> I am currently learning Geet about commands.</p>
 </body>
 </html>
